# raft-cpp

./: .clang-format  CMakeLists.txt  README.md
include/raft/common/: types.hpp
include/raft/node/: node_id.hpp
tests/node/: CMakeLists.txt  node_test.cpp
